website/versioned_docs/version-2.0.0-alpha.17/react-native.globaljsoncontainerstorage.md
---
id: version-2.0.0-alpha.17-react-native.globaljsoncontainerstorage
title: GlobalJSONContainerStorage class
hide_title: true
original_id: react-native.globaljsoncontainerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## GlobalJSONContainerStorage class


<b>Signature:</b>

```typescript
export declare class GlobalJSONContainerStorage implements ContainerStorage 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(driver)](./react-native.globaljsoncontainerstorage._constructor_.md) |  | Constructs a new instance of the <code>GlobalJSONContainerStorage</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [delAccessToken(namespace)](./react-native.globaljsoncontainerstorage.delaccesstoken.md) |  |  |
|  [delAuthenticationSession(namespace)](./react-native.globaljsoncontainerstorage.delauthenticationsession.md) |  |  |
|  [delIdentity(namespace)](./react-native.globaljsoncontainerstorage.delidentity.md) |  |  |
|  [delMFABearerToken(namespace)](./react-native.globaljsoncontainerstorage.delmfabearertoken.md) |  |  |
|  [delOAuthCodeVerifier(namespace)](./react-native.globaljsoncontainerstorage.deloauthcodeverifier.md) |  |  |
|  [delOAuthRedirectAction(namespace)](./react-native.globaljsoncontainerstorage.deloauthredirectaction.md) |  |  |
|  [delRefreshToken(namespace)](./react-native.globaljsoncontainerstorage.delrefreshtoken.md) |  |  |
|  [delSessionID(namespace)](./react-native.globaljsoncontainerstorage.delsessionid.md) |  |  |
|  [delUser(namespace)](./react-native.globaljsoncontainerstorage.deluser.md) |  |  |
|  [getAccessToken(namespace)](./react-native.globaljsoncontainerstorage.getaccesstoken.md) |  |  |
|  [getAuthenticationSession(namespace)](./react-native.globaljsoncontainerstorage.getauthenticationsession.md) |  |  |
|  [getExtraSessionInfoOptions(namespace)](./react-native.globaljsoncontainerstorage.getextrasessioninfooptions.md) |  |  |
|  [getIdentity(namespace)](./react-native.globaljsoncontainerstorage.getidentity.md) |  |  |
|  [getMFABearerToken(namespace)](./react-native.globaljsoncontainerstorage.getmfabearertoken.md) |  |  |
|  [getOAuthCodeVerifier(namespace)](./react-native.globaljsoncontainerstorage.getoauthcodeverifier.md) |  |  |
|  [getOAuthRedirectAction(namespace)](./react-native.globaljsoncontainerstorage.getoauthredirectaction.md) |  |  |
|  [getRefreshToken(namespace)](./react-native.globaljsoncontainerstorage.getrefreshtoken.md) |  |  |
|  [getSessionID(namespace)](./react-native.globaljsoncontainerstorage.getsessionid.md) |  |  |
|  [getUser(namespace)](./react-native.globaljsoncontainerstorage.getuser.md) |  |  |
|  [setAccessToken(namespace, accessToken)](./react-native.globaljsoncontainerstorage.setaccesstoken.md) |  |  |
|  [setAuthenticationSession(namespace, authenticationSession)](./react-native.globaljsoncontainerstorage.setauthenticationsession.md) |  |  |
|  [setExtraSessionInfoOptions(namespace, options)](./react-native.globaljsoncontainerstorage.setextrasessioninfooptions.md) |  |  |
|  [setIdentity(namespace, identity)](./react-native.globaljsoncontainerstorage.setidentity.md) |  |  |
|  [setMFABearerToken(namespace, mfaBearerToken)](./react-native.globaljsoncontainerstorage.setmfabearertoken.md) |  |  |
|  [setOAuthCodeVerifier(namespace, authorizationCode)](./react-native.globaljsoncontainerstorage.setoauthcodeverifier.md) |  |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./react-native.globaljsoncontainerstorage.setoauthredirectaction.md) |  |  |
|  [setRefreshToken(namespace, refreshToken)](./react-native.globaljsoncontainerstorage.setrefreshtoken.md) |  |  |
|  [setSessionID(namespace, sessionID)](./react-native.globaljsoncontainerstorage.setsessionid.md) |  |  |
|  [setUser(namespace, user)](./react-native.globaljsoncontainerstorage.setuser.md) |  |  |

